@@ -1,3 +1,13 @@
+2008-12-11  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Cameron Zwarich.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22797
+        REGRESSION: Crash at http://news.cnet.com/8301-17939_109-10119149-2.html
+        
+        * http/tests/plugins/get-url-expected.txt: Added.
+        * http/tests/plugins/get-url.html: Added.
+
 2008-12-11  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>
 
         Reviewed by Eric Seidel.
